포스트에 이미지(도시 사진 서울 01.png) 추가

--- a/_posts/2024-11-26-first.md
+++ b/_posts/2024-11-26-first.md
@@ -6,3 +6,5 @@ title: 블로그 포스트 연습-1 (2024-11-26 22시 07분)
 # 포스트 연습-1
 
 지킬 테마(Jekyll Theme)를 사용해 블로그를 만들고 포스팅을 연습하고 있습니다.
+
+![서울도시야경](/images/도시 사진 서울 01.png)
